# R18Z4Sim

./: CMakeCache.txt  CMakeLists.txt  Makefile  R18Z4Sim  R18Z4Sim.cpp  R18Z4Sim.h  README.md  cmake_install.cmake  components.cpp  sim.cpp  throttleProfile.csv
gui/: interface.py
includes/: components.cpp  components.h  ipc.cpp  ipc.h
